--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,9 @@
 <div class="container-fluid">
 
   <div class="row">
+    <h1>New Stuff</h1>
+  </div>
+  <div class="row">
 
     <img src="../assets/img/burger.png" alt="burgerpic">
 
