added fixed footer to contain count up timer

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,22 @@
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+body {
+  box-sizing: border-box;
+}
+
 form.signup,
 form.login {
   margin-top: 50px;
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
+  color: white;
 }
