--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,6 +12,11 @@ form.login {
   margin-top: 50px;
 }
 
+h1 {
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
 .footer {
   position: fixed;
   left: 0;
