--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,9 @@
 html, body {
   height: 100%;
-  margin: 0;
+	margin: 0;
+	background-image: url("../img/dumbsingle.jpg");
+	background-size: cover;
+	background-position: center;
 }
 
 body {
@@ -15,6 +18,11 @@ form.login {
 h1 {
   padding: 20px;
   margin-bottom: 40px;
+}
+
+.selectedWorkout,
+#enterWorkout {
+	cursor: pointer;
 }
 
 fieldset 
