--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,7 @@
 html, body {
   height: 100%;
 	margin: 0;
-	background-image: url("../img/dumbsingle.jpg");
-	background-size: cover;
+	background-image: url("../img/plates.jpg");
 	background-position: center;
 }
 
@@ -16,8 +15,12 @@ form.login {
 }
 
 h1 {
-  padding: 20px;
-  margin-bottom: 40px;
+	text-align: center;
+  margin-bottom: 20px;
+}
+
+h2 {
+	color: white;
 }
 
 .selectedWorkout,
