--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,13 +14,16 @@ form.login {
   margin-top: 50px;
 }
 
-/*h1#pageTitle {
-	display: inline-block;
-	text-align: center;
-}*/
+span.member-name {
+	text-transform: capitalize;
+}
 
 h2, h3, h4, p {
 	color: white;
+}
+
+h3 {
+	margin-bottom: 0px;
 }
 
 span a {
@@ -41,6 +44,10 @@ button {
 	text-decoration: none;
 	font-size: 16px;
 	color: black;
+}
+
+.btn:hover {
+	margin-top:10px;
 }
 
 button.startTimer {
