--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,7 +20,7 @@ span.member-name {
 
 span.namebox {
 	padding: 5px;
-	background-color: saddlebrown;
+	background-color: #5d4a44;
 	color: white;
 	display: inline-block; /*this keeps wrapped text padding from obscuring previous lines
 	Also, this was still a good exercise for the inline-block. I may take out the background pic*/
@@ -36,12 +36,13 @@ h3 {
 	margin-bottom: 0px;
 }
 
-span a {
-	color:black;
-}
-
 a {
+	padding: 5px;
+	background-color: #5d4a44;
 	color: white;
+	border-style: solid;
+	border-width: 4px;
+	display: inline-block;
 }
 
 label {
