--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,6 +14,21 @@ form.login {
   margin-top: 50px;
 }
 
+#loginDiv {
+	border-left-style: solid;
+	border-color: white;
+	border-width: 2px;
+	padding-left: 40px;
+}
+
+#signupinLogin {
+	margin-right: 40px;
+}
+
+#signupDiv {
+	margin-top: 50px;
+}
+
 span.member-name {
 	text-transform: capitalize;
 }
@@ -41,7 +56,7 @@ a {
 	background-color: #5d4a44;
 	color: white;
 	border-style: solid;
-	border-width: 4px;
+	border-width: 1px;
 	display: inline-block;
 }
 
@@ -100,3 +115,16 @@ legend {
   background-color: aquamarine;
   color: white;
 }
+
+@media only screen and (max-width: 767px) {
+	#signupinLogin {
+		margin-bottom: 60px;
+	}
+	
+	#logininLogin {
+		border-top-style: solid;
+		border-color: white;
+		border-width: 2px;
+		padding-top: 35px;
+	}
+  }
