--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,6 +9,10 @@ body {
   background-position: center;
 }
 
+.wrapper {
+	background-color: #f8f8f8;
+}
+
 form.signup,
 form.login {
   margin-top: 50px;
@@ -51,15 +55,6 @@ h3 {
 	margin-bottom: 0px;
 }
 
-a {
-	padding: 5px;
-	background-color: #5d4a44;
-	color: white;
-	border-style: solid;
-	border-width: 1px;
-	display: inline-block;
-}
-
 label {
 	color: white;
 }
@@ -71,6 +66,11 @@ button {
 	font-size: 16px;
 	color: black;
 }
+
+span a, a:hover {
+	 color: black;
+	 text-decoration: none;
+ }
 
 .btn:hover {
 	margin-top:10px;
@@ -91,7 +91,7 @@ fieldset {
 		padding: 10px;       
 		position: relative;
 		border-radius:4px;
-		background-color:saddlebrown;
+		background-color: #5d4a44;
 		padding-left:10px;
 	}	
 	
