--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,6 +13,12 @@ body {
 	background-color: #f8f8f8;
 }
 
+/* Change glow around all input fields to yellow from bootstrap's blue */
+.form-control:focus {
+	border-color: #f7f700;
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgb(247,247,0,0.6);
+}
+
 form.signup,
 form.login {
   margin-top: 50px;
@@ -43,6 +49,7 @@ span.namebox {
 	color: white;
 	display: inline-block; /*this keeps wrapped text padding from obscuring previous lines
 	Also, this was still a good exercise for the inline-block. I may take out the background pic*/
+	border-radius: 4px;
 }
 
 /*h2, h3, h4, p {
@@ -65,6 +72,7 @@ button {
 	text-decoration: none;
 	font-size: 16px;
 	color: black;
+	border-radius: 4px;
 }
 
 span a, a:hover {
