--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,6 +14,7 @@ body {
 .wrapper {
 	background-color: #f8f8f8;
 	width: 100%;
+	padding: 10px;
 }
 
 /* Change glow around all input fields to yellow from bootstrap's blue */
