--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,6 +15,7 @@ body {
 	background-color: #f8f8f8;
 	width: 100%;
 	padding: 10px;
+	border-radius: 4px;
 }
 
 /* Change glow around all input fields to yellow from bootstrap's blue */
@@ -79,6 +80,11 @@ button {
 	border-radius: 4px;
 }
 
+button:focus, button:visited {
+	border-color: #f7f700;
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgb(247,247,0,0.6);
+}
+
 span a, a:hover {
 	 color: black;
 	 text-decoration: none;
@@ -92,6 +98,10 @@ button.startTimer {
 	margin-left: 15px;
 	margin-right: 0px;
 	margin-bottom: 10px;
+	width: 50px;
+	height: 50px;
+	color: white;
+	background-color: green;
 }
 
 .selectedWorkout, #enterWorkout {
