--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,7 +20,7 @@ body {
 
 /* Change glow around all input fields to yellow from bootstrap's blue */
 .form-control:focus {
-	border-color: #f7f700;
+	border-color: #c6a57b;
 	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgb(247,247,0,0.6);
 }
 
@@ -78,10 +78,11 @@ button {
 	font-size: 16px;
 	color: black;
 	border-radius: 4px;
+	border-color: #5d4a44;
 }
 
 button:focus, button:visited {
-	border-color: #f7f700;
+	border-color: #c6a57b;
 	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgb(247,247,0,0.6);
 }
 
