--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -101,8 +101,8 @@ button.startTimer {
 	margin-bottom: 10px;
 	width: 50px;
 	height: 50px;
-	color: white;
-	background-color: green;
+	color: #9e3b29;
+	background-color: #f3e0ba;
 }
 
 .selectedWorkout, #enterWorkout {
