changed name of app, needed h2 to he change

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -44,6 +44,10 @@ form.login {
 	margin-top: 50px;
 }
 
+#pageTitle {
+	display: inline-block;
+}
+
 span.member-name {
 	text-transform: capitalize;
 }
